solve mobile for landing page and fix bug. Reminder: do not use position shifting when setting width to 100%

--- a/style/test.css
+++ b/style/test.css
@@ -12,10 +12,10 @@ h2 {
     font-size: 3.5em;
 }
 h3{
-    font-size:2.2em;
+    font-size:2.7em;
 }
 .shout {
-    font-size: 2.5em;
+    font-size: 2em;
     font-family:cursive;
     font-weight:bolder;
     font-style:italic;
@@ -73,13 +73,13 @@ h3{
 }
 /*HEADER : setting the positions*/
 .header-main1{
-    position:relative;
-    left:15%;
+/*    position:relative;*/
+    padding-left:17%;
 }
 .header-main2{
-    position:relative;
-    top:-30px;
-    left:25%;
+/*    position:relative;*/
+/*    top:-30px;*/
+    padding-left:20%;
 }
 
 .gap {
@@ -119,7 +119,7 @@ h3{
 
 
 
-@media screen and (min-width:1440px){
+@media screen and (max-width:1440px){
     h1 {
         font-size: 4.3em;
     }
@@ -127,7 +127,7 @@ h3{
         font-size: 3.3em;
     }
     h3{
-        font-size:2em;
+        font-size:2.2em;
     }
     .shout {
         font-size: 2.3em;
@@ -182,17 +182,17 @@ h3{
         margin-top:20px;
     }
     /*HEADER : setting the positions*/
-    .header-main1{
-        position:relative;
-        left:15%;
-    }
-    .header-main2{
-        position:relative;
-        top:-30px;
-        left:25%;
-    }    
+    /*.header-main1{*/
+    /*    position:relative;*/
+    /*    left:15%;*/
+    /*}*/
+    /*.header-main2{*/
+    /*    position:relative;*/
+    /*    top:-30px;*/
+    /*    left:25%;*/
+    /*}    */
 }
-@media screen and (min-width:1024px){
+@media screen and (max-width:1024px){
     .picture_main {
         background-position: 68% 70%;
         height: 65%;
@@ -207,7 +207,7 @@ h3{
     /*    left:28%;*/
     /*}    */
 }
-@media screen and (min-width:768px){
+@media screen and (max-width:768px){
     h1 {
         font-size: 3.5em;
     }
@@ -228,15 +228,15 @@ h3{
     /*    height:40rem;*/
     /*}*/
 
-    .header-main1{
-        position:relative;
-        left:10%;
-    }
-    .header-main2{
-        position:relative;
-        top:-15px;
-        left:18%;
-    }
+    /*.header-main1{*/
+    /*    position:relative;*/
+    /*    left:10%;*/
+    /*}*/
+    /*.header-main2{*/
+    /*    position:relative;*/
+    /*    top:-15px;*/
+    /*    left:18%;*/
+    /*}*/
     .picture_main {
         background-image: url("../image/car-snow.jpg");
         background-size: cover ;
